# squamishaccess-functions

./: .dockerignore  .funcignore  .gitignore  Cargo.toml  README.md  host.json  local.settings.json
.github/workflows/: ci.yml
Membership-Check/: function.json
Paypal-IPN/: function.json
SimpleHttpTrigger/: function.json
src/: ipn_handler.rs  lib.rs  logger.rs  main.rs  membership_check.rs
src/azure_function/: http_context_transform.rs  logger.rs  mod.rs
src/functions/: function.rs  mod.rs
