[package]
name = "squamishaccess-signup-function-rs"
version = "1.0.1"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.6"
dotenv = "0.15.0"
femme = "2.1.1"
http-types = "2.7.0"
log = "0.4.11"
md5 = "0.7.0"
serde_json = "1.0"
serde_qs = "0.7.0"

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.surf]
version = "2.1"
default-features = false 
features = ["h1-client", "encoding"]

[dependencies.tide]
version = "0.14"
default-features = false 
features = ["h1-server"]
