[package]
name = "squamishaccess-functions"
version = "2.0.0"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.6"
dotenv = "0.15.0"
femme = "2.1.1"
http-types = "2.7.0"
log = "0.4.11"
md5 = "0.7.0"
serde_json = "1.0"
serde_qs = "0.8.2"

[dependencies.async-std]
version = "1.7"
features = ["attributes"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.http-client]
# Pin to a version of http-client before connection pooling, as that feature may be causing timed out sockets to be reused.
version = "=6.2.0"
default-features = false
# (6.3.0+) # Fix http-client's features for the h1 client even though we do not depend on it directly.
features = ["h1_client"] #, "native-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.surf]
version = "2.1"
default-features = false 
features = ["h1-client", "encoding"]

[dependencies.tide]
version = "0.16"
default-features = false 
features = ["h1-server"]

[profile.release]
lto = true
