[package]
name = "squamishaccess-functions"
version = "3.2.5"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2021"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.0"
dotenv = "0.15.0"
femme = "2.1.1"
http-types = "2.7.0"
log = "0.4.11"
md5 = "0.7.0"
serde_json = "1.0"
serde_qs = "0.10.1"

[dependencies.async-std]
version = "1.7"
features = ["attributes"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.http-client]
version = "6.4.0"
default-features = false
# (6.3.0+) # Fix http-client's features for the h1 client even though we do not depend on it directly.
features = ["h1_client", "unstable-config", "native-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.surf]
version = "2.1"
default-features = false 
features = ["h1-client", "encoding"]

[dependencies.tide]
version = "0.16"
default-features = false 
features = ["h1-server"]

[profile.release]
lto = true
